# Kenjector

./: Cargo.toml  build.rs
resources/: logo.ai
src/: main.rs
src/logic/: kenjector.rs  mod.rs
src/ui/: gtk.css  listview.rs  messagebox.rs  mod.rs
