[package]
name = "Kenjector"
version = "0.1.1"
edition = "2024"
authors = ["Ken Masters <GameHackingDojo@gmail.com>"]
description = "A simple dll injector"
license = "GPL-3.0"
repository = "https://github.com/GameHackingDojo/kenjector"
license-file = "LICENSE"
# build = "build.rs"

[dependencies]
gtk4 = { version = "0.9.6", features = ["v4_18"] }
# tokio = { version = "1.45.1", features = ["full"] }
derive_more = { version = "2.0.1", features = ["full"] }

parking_lot = "0.12.4"
dashmap = "6.1.0"

pelite = "0.10.0"
goblin = "0.10.0"


winapi = { version = "0.3.9", features = [
  "winuser",
  "processthreadsapi",
  "memoryapi",
  "handleapi",
  "synchapi",
  "minwinbase",
  "libloaderapi",
  "psapi",
  "errhandlingapi",
  "tlhelp32",
  "winbase",
  "shellapi",
  "securitybaseapi",
  "wow64apiset",
] }

[target.'cfg(windows)'.dependencies]
gdk4-win32 = "0.9.5"


[build-dependencies]
winres = "0.1.12"
